# excel_transactoins

./: .gitignore  README.md  pyproject.toml
data/: .~lock.operations.xlsx#  operations Sun Feb 02 23_24_35 MSK 2025-Fri Feb 07 21_19_30 MSK 2025.xls
src/: reports.py  services.py  utils.py  views.py
