[tool.poetry]
name = "excel-transactions"
version = "0.1.0"
description = ""
authors = ["Petr <petrobatakshov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
requests = "^2.32.3"

[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
isort = "^6.0.0"
mypy = "^1.15.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
